--- a/Epiphany Music App 1.0.WEBMVC/Epiphany Music App 1.0.WEBMVC.csproj
+++ b/Epiphany Music App 1.0.WEBMVC/Epiphany Music App 1.0.WEBMVC.csproj
@@ -195,13 +195,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ConcertController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MusicController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
-    <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -265,6 +266,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Music\Create.cshtml" />
+    <Content Include="Views\Music\Index.cshtml" />
+    <Content Include="Views\Music\Details.cshtml" />
+    <Content Include="Views\Music\Delete.cshtml" />
+    <Content Include="Views\Music\Edit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -281,6 +287,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\EpiphanyMusic.Data\EpiphanyMusic.Data.csproj">
+      <Project>{2e9d2b09-747d-4121-b58c-320ecb296ce4}</Project>
+      <Name>EpiphanyMusic.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EpiphanyMusic.Models\EpiphanyMusic.Models.csproj">
+      <Project>{e280f20a-ed5a-4bc1-86b7-0c74cc50daaf}</Project>
+      <Name>EpiphanyMusic.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\EpiphanyMusic.Services\EpiphanyMusic.Services.csproj">
+      <Project>{ecd60d42-efcb-496d-8e02-6223c32e6490}</Project>
+      <Name>EpiphanyMusic.Services</Name>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
