--- a/Epiphany Music App 1.0.WEBMVC/Web.config
+++ b/Epiphany Music App 1.0.WEBMVC/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=&quot;|DataDirectory|\aspnet-Epiphany Music App 1.0.WEBMVC-20180817104141.mdf&quot;;Initial Catalog=&quot;aspnet-Epiphany Music App 1.0.WEBMVC-20180817104141&quot;;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=EpiphanyMusicApp;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
